Corrigiendo errores en los reportes
Ya les habia dicho si van a subir cosas con errores no suban nada mejor