@@ -12,8 +12,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
+                    <release>17</release>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+                        <!--->
+                        <arg>enable-preview</arg>
+                        <-->
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -81,26 +84,20 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.itextpdf</groupId>
-            <artifactId>itext7-core</artifactId>
-            <version>7.2.3</version> 
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.7</version>
             <type>pom</type>
-        </dependency>
-        <dependency>
-            <groupId>Itext</groupId>
-            <artifactId>Itext</artifactId>
-            <version>1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.LGoodDatePicker</groupId>
-            <artifactId>LGoodDatePicker</artifactId>
-            <version>11.2.1</version> 
         </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>17</maven.compiler.release>
+        <!---Comentareo estas dos lineas para que quien sea pueda compilar su codigo
+            Sin embargo si usamos sintaxis diferentes nos va a afectar>
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
+        <-->
         <exec.mainClass>com.mycompany.sistemapresentacioncinelerma.SistemaPresentacionCineLerma</exec.mainClass>
     </properties>
 </project>
